--- a/Table-Style/index.html
+++ b/Table-Style/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/Table-Style/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Table-Style</title>
   </head>
   <body>
